# ais

./: .env  .gitignore  compose.dev.yaml  compose.prod.yaml  compose.stage.yaml  compose.test.yaml  compose.yaml
backend/: .gitignore  Dockerfile  pyproject.toml
backend/alembic/: env.py
backend/alembic/versions/: c6d42be10447_create_tables.py  e8036563d28e_init.py
backend/app/: main.py
backend/app/auth/: dependecies.py  exceptions.py  models.py  repository.py  routes.py  schemas.py
backend/app/auth/services/: __init__.py  auth_model_service.py  auth_session_service.py
backend/app/core/: __init__.py  config.py  controller.py  database.py  dependencies.py  exceptions.py  schemas.py  utils.py
backend/app/core/repositories/: __init__.py  model.py
backend/app/core/services/: __init__.py  model.py
backend/app/eaip_content/: routes.py  schemas.py
backend/app/eaip_issues/: __init__.py  config.py  exceptions.py  models.py  routes.py  schemas.py  service.py
backend/app/edit_issues/: exceptions.py  routes.py
backend/app/media/: __init__.py  config.py  routes.py  schemas.py  service.py
backend/app/notam/: config.py  exceptions.py  routes.py
backend/app/users/: constants.py  controller.py  models.py  repository.py  routes.py  schemas.py  service.py  utils.py
backend/tools/: superuser.py
frontend/: .env  .env.development  .env.production  .env.test  Dockerfile  next.config.ts  package-lock.json  package.json
frontend/src/: middleware.ts
nginx/: dev.conf  local.conf  nginx.conf  prod.conf  stage.conf  test.conf
nginx/ssl/: fullchain.pem  privkey.pem
(+46 files in other folders)
